# scorep_substrates_dynamic_filtering

./: .gitignore  .travis.yml  0001-Creates-patch-for-CMakeLists.txt-needed-for-building.patch  AUTHORS  CMakeLists.txt  LICENSE  README.md
include/scorep/: SCOREP_Libwrap.h  SCOREP_Libwrap_Macros.h  SCOREP_MetricPlugins.h  SCOREP_MetricTypes.h  SCOREP_PublicHandles.h  SCOREP_PublicTypes.h  SCOREP_SubstrateEvents.h  SCOREP_SubstratePlugins.h  SCOREP_Tau.h  SCOREP_User.h  SCOREP_User.inc  SCOREP_User_Functions.h  SCOREP_User_Types.h  SCOREP_User_Variables.h
src/: delete-call.c  delete-call.h  dynamic-filtering.c
